Add .gitignore and remove ignored files from tracking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,9 +5,11 @@
         "divisibleby",
         "floatformat",
         "forloop",
+        "pycache",
         "studentexam",
         "stylesheet",
         "subjectivequestion",
+        "venv",
         "yourapp"
     ]
 }
